 * doc/geany.txt, doc/geany.html:
   Add 'Configuration file paths' section and link to it instead of
   repeating typical system data and user config directory paths.
   List 2 Tools->Configuration Files menu items.
   Add 'Plugin Manager' section break.
   Edit some related sections.
 * doc/geany.txt, doc/geany.html:
   Update Ignore Tags section with example and menu item.


2010-12-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Improve error message for document_save_file() if doc->file_name is
   NULL (reusing existing strings).
   Add warning about this in the API docs.


2010-12-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * scintilla/ScintillaGTK.cxx:
   Backport Scintilla HG fix: Remove styling idle in destructor to
   avoid crashing when idle called after ScintillaGTK instance
   destroyed (fixes #3111058).
   This prevents a crash when closing a modified document (usually
   without a trailing newline) and choosing Save.


2010-12-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Warn about file truncation if unsafe file saving fails.


2010-11-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c:
   Check result of fclose() for utils_write_file().


2010-11-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * win32-config.h:
   Enable GIO and built-in regex support on Windows
   when compiling without Waf.


2010-11-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany_private.rc:
   Reformat and improve the Windows resource file.


2010-11-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * data/filetype_extensions.conf:
   Add *.latex pattern.
 * src/interface.c, geany.glade:
   Add note to indentation prefs page about using Project->Apply
   Default Indentation for currently open documents.


2010-11-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
