@@ -4554,6 +4554,12 @@ complete filename, e.g. for shell scripts.</p>
 <p>There is a special filetype definition file called
 filetypes.common. This file defines some general non-filetype-specific
 settings.</p>
+<p>You can open the user filetypes.common with the
+<em>Tools-&gt;Configuration Files-&gt;filetypes.common</em> menu item. This adds
+the default settings to the user file if the file doesn't exist.
+Alternatively the file can be created manually, adding only the
+settings you want to change. All missing settings will be read from
+the system file.</p>
 <div class="note">
 <p class="first admonition-title">Note</p>
 <p class="last">See the <a class="reference" href="#filetype-configuration">Filetype configuration</a> section for how to define styles.</p>
@@ -6393,7 +6399,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-12-07 18:00 UTC.
+Generated on: 2010-12-07 18:05 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
