@@ -3853,6 +3853,13 @@ There is a special filetype definition file called
 filetypes.common. This file defines some general non-filetype-specific
 settings.
 
+You can open the user filetypes.common with the
+*Tools->Configuration Files->filetypes.common* menu item. This adds
+the default settings to the user file if the file doesn't exist.
+Alternatively the file can be created manually, adding only the
+settings you want to change. All missing settings will be read from
+the system file.
+
 .. note::
     See the `Filetype configuration`_ section for how to define styles.
 
