@@ -18,6 +18,8 @@
    Edit some related sections.
  * doc/geany.txt, doc/geany.html:
    Update Ignore Tags section with example and menu item.
+ * doc/geany.txt, doc/geany.html:
+   List 'Tools->Configuration Files->filetypes.common' menu item.
 
 
 2010-12-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
